<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_main_logo"
        android:layout_width="wrap_content"
        android:layout_height="194dp"
        android:layout_alignParentStart="true"

        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"

        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:src="@drawable/looka_com"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/iv_description_maintrans" />


    <TextView
        android:id="@+id/tv_main_plecare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"

        android:fontFamily="@font/carter_one"

        android:gravity="center_horizontal"
        android:text="@string/locatie_plecare"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_main_giurgiu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:fontFamily="@font/simonetta"
        android:gravity="center"
        android:text="@string/btn_main_autobuz_gr"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_main_bucuresti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:fontFamily="@font/simonetta"
        android:gravity="center"
        android:text="@string/btn_main_autobuz_buc"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_main_pret_bilet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"

        android:fontFamily="@font/carter_one"
        android:gravity="center"
        android:text="@string/pret_bilet"
        android:textSize="21sp" />

    <Button
        android:id="@+id/btn_main_rezervare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:fontFamily="@font/simonetta"
        android:gravity="center"
        android:text="@string/btn_main_rezerva_loc"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>