<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".database.ProfileActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_profile_nume"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_profile_nume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nume_client" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/locul_de_plecare"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/til_profile_nume"
        app:layout_constraintStart_toStartOf="@+id/til_profile_nume"
        app:layout_constraintTop_toBottomOf="@+id/til_profile_nume" />

    <RadioGroup
        android:id="@+id/rg_profile_loc_plecare"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/rb_profile_giurgiu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/giurgiu" />

        <RadioButton
            android:id="@+id/rb_profile_bucuresti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bucuresti" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_profile_select_firma"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:text="@string/selecteaza_firma"
        app:layout_constraintEnd_toEndOf="@id/rg_profile_loc_plecare"
        app:layout_constraintStart_toStartOf="@id/rg_profile_loc_plecare"
        app:layout_constraintTop_toBottomOf="@id/rg_profile_loc_plecare"
    />

    <Spinner
        android:id="@+id/spn_profile_firma"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_profile_select_firma"
        app:layout_constraintStart_toStartOf="@+id/tv_profile_select_firma"
        app:layout_constraintTop_toBottomOf="@id/tv_profile_select_firma" />


    <Button
        android:id="@+id/btn_profile_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>