<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lv_row_firma"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/lv_row_view_bcg"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/iv_lv_row_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/orar_bus_gr"
        android:src="@drawable/ic_baseline_directions_bus_24_yellow"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_row_nume_sofer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/nume_sofer"
        android:textColor="#FFEB3B"
        app:layout_constraintEnd_toStartOf="@+id/tv_row_nr_masina"
        app:layout_constraintStart_toEndOf="@+id/iv_lv_row_picture"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_row_nr_masina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/numar_masina"
        android:textColor="#FFEB3B"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_row_nume_sofer"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tv_row_zi_plecare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_horizontal"
        android:text="@string/ziua_plecarii"
        android:textAlignment="center"
        android:textColor="#FFEB3B"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/tv_row_ora_plecare"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_lv_row_picture"
        />

    <TextView
        android:id="@+id/tv_row_ora_plecare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ora_plecare"
        android:textColor="#FFEB3B"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/tv_row_nume_firma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_row_zi_plecare"
        />

    <TextView
        android:id="@+id/tv_row_nume_firma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:text="@string/nume_firma"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFEB3B"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_row_zi_plecare" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFEB3B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>